readline v ughh painful

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g prefix C-b
+set -g prefix C-b
 bind C-b send-prefix
 setw -g mode-keys vi
 set -g base-index 1
@@ -7,6 +7,8 @@ setw -g mouse on
 set -g status-bg black
 set -g status-fg white
 set -g status-right "%H%M"
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 bind-key -n M-q new-window
 bind-key -n M-h select-pane -L
 bind-key -n M-j select-pane -D
