--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,7 @@
 set editing-mode vi
 set enable-keypad on
+set keymap vi-command
+v:""
 set keymap vi-insert
 "\e[A":history-search-backward
 "\e[B":history-search-forward
