Tune fontconfig for wayland

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -6,31 +6,31 @@
       <bool>true</bool>
     </edit>
   </match>
-<match target="font">
+  <match target="font">
     <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
+      <const>hintslight</const>
     </edit>
   </match>
-    <match target="font">
+  <match target="font">
     <edit mode="assign" name="antialias"><bool>true</bool></edit>
   </match>
 
-<alias>
-	<family>Monospace</family>
-	<prefer><family>DejaVu Sans Mono</family></prefer>
-</alias>
+  <alias>
+    <family>Monospace</family>
+    <prefer><family>DejaVu Sans Mono</family></prefer>
+  </alias>
   <match target="font">
     <edit name="rgba" mode="assign">
       <const>rgb</const>
     </edit>
   </match>
 
-<config>
+  <config>
 <!--
   Rescan configuration every 30 seconds when FcFontSetList is called
  -->
-		<rescan>
-			<int>30</int>
-		</rescan>
-	</config>
+    <rescan>
+      <int>30</int>
+    </rescan>
+  </config>
 </fontconfig>
