--- a/.mpv/input.conf
+++ b/.mpv/input.conf
@@ -30,22 +30,24 @@ m cycle mute
 + add audio-delay 0.1
 = add audio-delay 0.1
 - add audio-delay -0.1
-#[ speed_incr -0.1	# scale playback speed
-#] speed_incr 0.1
-#{ speed_incr -0.05
-#} speed_incr 0.05
-BS set speed 1.0	# reset speed to normal
+[ add speed -0.1
+] add speed 0.1
+{ add speed -0.05
+} add speed 0.05
+BS set speed 1.0
 q quit
 ESC quit
-ENTER playlist_next     # skip to next file
+ENTER playlist_next
 p cycle pause
-. frame_step            # advance one frame and pause
+. frame_step
 SPACE cycle pause
 HOME playlist_next
 END playlist_prev
-> playlist_next             # skip to next file
-< playlist_prev             #         previous
-o osd
+> playlist_next
+< playlist_prev
+f playlist_next
+b playlist_prev
+# o osd
 I show_text "${filename}"   # display filename in osd
 z add sub-delay -0.1        # subtract 100 ms delay from subs
 x add sub-delay +0.1        # add
