--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,29 +1,13 @@
-set -g prefix C-b
-bind C-b send-prefix
-setw -g mode-keys vi
-set -g base-index 1
-set -g pane-base-index 1
-setw -g mouse on
-set -g status-bg black
-set -g status-fg white
+set-option -g prefix M-z
+set -g mouse on
 set -g status-right "%H%M"
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -n M-q new-window
-bind-key -n M-h select-pane -L
-bind-key -n M-j select-pane -D
-bind-key -n M-k select-pane -U
-bind-key -n M-l select-pane -R
-bind-key -n M-Tab next-window
-bind-key -n M-` previous-window
-bind-key -n M-w split-window -h
-bind-key -n M-e split-window -v
-bind-key -n M-1 select-window -t 1
-bind-key -n M-2 select-window -t 2
-bind-key -n M-3 select-window -t 3
-bind-key -n M-4 select-window -t 4
-bind-key -n M-5 select-window -t 5
-bind-key -n M-6 select-window -t 6
-bind-key -n M-7 select-window -t 7
-bind-key -n M-8 select-window -t 8
-bind-key -n M-9 select-window -t 9
+
+bind Left select-pane -L
+bind Right select-pane -R
+bind Up select-pane -U
+bind Down select-pane -D
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+bind "'" splitw -h -p 50
