--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,35 @@
-set-option -g prefix M-z
+set -g prefix M-z
 set -g mouse on
-set -g status-right "%H%M"
+set -g status-right "#{?client_prefix,#[reverse]%H%M#[noreverse],%H%M}"
+set -g status-style "bg=black"
+set -g status on
+set -g base-index 1
+setw -g pane-base-index 1
+setw -g mode-keys vi
+set -s escape-time 0
+set -g set-clipboard on
+setw -g aggressive-resize on
+setw -g xterm-keys on
+set -g default-terminal "xterm-256color"
+set -g history-limit 8388608
 
+unbind Escape
+unbind t
+bind a send-prefix
 bind Left select-pane -L
 bind Right select-pane -R
 bind Up select-pane -U
 bind Down select-pane -D
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind Tab next-window
+bind S-Tab previous-window
 bind "'" splitw -h -p 50
+#bind J join-split -t:{previous}
+bind -n M-1 if-shell 'tmux select-window -t 1' '' 'new-window -t 1'
+bind -n M-2 if-shell 'tmux select-window -t 2' '' 'new-window -t 2'
+bind -n M-3 if-shell 'tmux select-window -t 3' '' 'new-window -t 3'
+bind -n M-4 if-shell 'tmux select-window -t 4' '' 'new-window -t 4'
+bind -n M-5 if-shell 'tmux select-window -t 5' '' 'new-window -t 5'
+bind -n M-6 if-shell 'tmux select-window -t 6' '' 'new-window -t 6'
+bind -n M-7 if-shell 'tmux select-window -t 7' '' 'new-window -t 7'
+bind -n M-8 if-shell 'tmux select-window -t 8' '' 'new-window -t 8'
+bind -n M-9 if-shell 'tmux select-window -t 9' '' 'new-window -t 9'
