fix recent tmux failing on -p 50

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ bind Up select-pane -U
 bind Down select-pane -D
 bind Tab next-window
 bind S-Tab previous-window
-bind "'" splitw -h -p 50
+bind "'" splitw -h
 #bind J join-split -t:{previous}
 bind -n M-1 if-shell 'tmux select-window -t 1' '' 'new-window -t 1'
 bind -n M-2 if-shell 'tmux select-window -t 2' '' 'new-window -t 2'
