--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,13 @@
 set -g prefix M-z
 set -g mouse on
-set -g status-right "#{?client_prefix,#[reverse]%H%M#[noreverse],%H%M}"
 set -g status-style "bg=black"
-set -g status on
+set -g status off
 set -g base-index 1
 setw -g pane-base-index 1
 setw -g mode-keys vi
 set -s escape-time 0
 set -g set-clipboard on
 setw -g aggressive-resize on
-setw -g xterm-keys on
-set -g default-terminal "xterm-256color"
 set -g history-limit 8388608
 
 unbind Escape
