--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set -s escape-time 0
 set -g set-clipboard on
 setw -g aggressive-resize on
 set -g history-limit 8388608
+setw -g set-titles on
 
 unbind Escape
 unbind t
